Added ranger config

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -18,7 +18,7 @@ ext svg, 					X, flag f = inkscape -- "$@"
 ext ai, 					X, flag f = inkscape -- "$@"
 mime ^image, has feh,       X, flag f = feh -- "$@"
 
-ext md|org|txt					X, flag f = emacs --"$@"
+ext md|org|txt					X, flag f = emacs "$@"
 #-------------------------------------------
 # Misc
 #-------------------------------------------
