Changed vim settings

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -11,6 +11,10 @@
 			"command": "java",
 			"args": ["-jar", "/home/simon/misc/lsp/lsp4xml/org.eclipse.lsp4xml/target/org.eclipse.lsp4xml-uber.jar"],
 			"filetypes": ["xml","xslt", "xsd"]
+		},
+		"kotlin": {
+			"command": "/home/simon/misc/lsp/kotlin-lsp/server/build/install/server/bin/kotlin-language-server",
+			"filetypes": ["kotlin"]
 		}
 	}
 }
