--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -144,36 +144,68 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-# Colors (Gruvbox dark)
+# Colors (Belafonte Day)
 colors:
   # Default colors
   primary:
     # hard contrast: background = '0x1d2021'
-    background: '0x282828'
+    background: '0xd5ccba'
     # soft contrast: background = '0x32302f'
-    foreground: '0xebdbb2'
+    foreground: '0x45373c'
 
   # Normal colors
   normal:
-    black:   '0x282828'
-    red:     '0xcc241d'
-    green:   '0x98971a'
-    yellow:  '0xd79921'
-    blue:    '0x458588'
-    magenta: '0xb16286'
-    cyan:    '0x689d6a'
-    white:   '0xa89984'
+    black:   '0x20111b'
+    red:     '0xbe100e'
+    green:   '0x858162'
+    yellow:  '0xeaa549'
+    blue:    '0x426a79'
+    magenta: '0x97522c'
+    cyan:    '0x989a9c'
+    white:   '0x968c83'
 
   # Bright colors
   bright:
-    black:   '0x928374'
-    red:     '0xfb4934'
-    green:   '0xb8bb26'
-    yellow:  '0xfabd2f'
-    blue:    '0x83a598'
-    magenta: '0xd3869b'
-    cyan:    '0x8ec07c'
-    white:   '0xebdbb2'
+    black:   '0x5e5252'
+    red:     '0xbe100e'
+    green:   '0x858162'
+    yellow:  '0xeaa549'
+    blue:    '0x426a79'
+    magenta: '0x97522c'
+    cyan:    '0x989a9c'
+    white:   '0xd5ccba'
+
+
+    ## Colors (Gruvbox dark)
+    #colors:
+    #  # Default colors
+    #  primary:
+    #    # hard contrast: background = '0x1d2021'
+    #    background: '0x282828'
+    #    # soft contrast: background = '0x32302f'
+    #    foreground: '0xebdbb2'
+    #
+    #  # Normal colors
+    #  normal:
+    #    black:   '0x282828'
+    #    red:     '0xcc241d'
+    #    green:   '0x98971a'
+    #    yellow:  '0xd79921'
+    #    blue:    '0x458588'
+    #    magenta: '0xb16286'
+    #    cyan:    '0x689d6a'
+    #    white:   '0xa89984'
+    #
+    #  # Bright colors
+    #  bright:
+    #    black:   '0x928374'
+    #    red:     '0xfb4934'
+    #    green:   '0xb8bb26'
+    #    yellow:  '0xfabd2f'
+    #    blue:    '0x83a598'
+    #    magenta: '0xd3869b'
+    #    cyan:    '0x8ec07c'
+    #    white:   '0xebdbb2'
 
 
 # Visual Bell
