--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -9,6 +9,10 @@
 		"kotlin": {
 			"command": "/home/simon/misc/lsp/kotlin-lsp/server/build/install/server/bin/kotlin-language-server",
 			"filetypes": ["kotlin"]
-		}
+		},
+		"clangd.arguments": [
+			"--background-index",
+			"--completion-style=detailed"
+		]
 	}
 }
