I was fool, it was because of syntax. God damn it

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -10,5 +10,10 @@
 			"command": "/home/simon/misc/lsp/kotlin-lsp/server/build/install/server/bin/kotlin-language-server",
 			"filetypes": ["kotlin"]
 		}
-	}
+	},
+	"clangd.arguments": [
+		"--compile-commands-dir=./build",
+		"--background-index",
+		"--completion-style=detailed"
+	]
 }
