--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -21,6 +21,8 @@ window:
     columns: 80
     lines: 20
 
+  dynamic_title: true
+
   # Window position (changes require restart)
   #
   # Specified in number of pixels.
@@ -136,65 +138,36 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-# Colors (Seoul256)
+# Colors (Gruvbox dark)
 colors:
   # Default colors
   primary:
-    background: '#3a3a3a'
-    foreground: '#d0d0d0'
+    # hard contrast: background = '#1d2021'
+    background: '#282828'
+    # soft contrast: background = '#32302f'
+    foreground: '#ebdbb2'
 
   # Normal colors
   normal:
-    black:   '#4e4e4e'
-    red:     '#d68787'
-    green:   '#5f865f'
-    yellow:  '#d8af5f'
-    blue:    '#85add4'
-    magenta: '#d7afaf'
-    cyan:    '#87afaf'
-    white:   '#d0d0d0'
+    black:   '#282828'
+    red:     '#cc241d'
+    green:   '#98971a'
+    yellow:  '#d79921'
+    blue:    '#458588'
+    magenta: '#b16286'
+    cyan:    '#689d6a'
+    white:   '#a89984'
 
   # Bright colors
   bright:
-    black:   '#626262'
-    red:     '#d75f87'
-    green:   '#87af87'
-    yellow:  '#ffd787'
-    blue:    '#add4fb'
-    magenta: '#ffafaf'
-    cyan:    '#87d7d7'
-    white:   '#e4e4e4'
-
-# Colors (Gruvbox dark)
-#colors:
-#  # Default colors
-#  primary:
-#    # hard contrast: background = '0x1d2021'
-#    background: '0x282828'
-#    # soft contrast: background = '0x32302f'
-#    foreground: '0xebdbb2'
-#
-#  # Normal colors
-#  normal:
-#    black:   '0x282828'
-#    red:     '0xcc241d'
-#    green:   '0x98971a'
-#    yellow:  '0xd79921'
-#    blue:    '0x458588'
-#    magenta: '0xb16286'
-#    cyan:    '0x689d6a'
-#    white:   '0xa89984'
-#
-#  # Bright colors
-#  bright:
-#    black:   '0x928374'
-#    red:     '0xfb4934'
-#    green:   '0xb8bb26'
-#    yellow:  '0xfabd2f'
-#    blue:    '0x83a598'
-#    magenta: '0xd3869b'
-#    cyan:    '0x8ec07c'
-#    white:   '0xebdbb2'
+    black:   '#928374'
+    red:     '#fb4934'
+    green:   '#b8bb26'
+    yellow:  '#fabd2f'
+    blue:    '#83a598'
+    magenta: '#d3869b'
+    cyan:    '#8ec07c'
+    white:   '#ebdbb2'
 
 # Visual Bell
 #
@@ -217,7 +190,7 @@ colors:
 #   - Linear
 #
 # Specifying a `duration` of `0` will disable the visual bell.
-visual_bell:
+bell:
   animation: EaseOutExpo
   duration: 0
   color: '0xffffff'
@@ -226,7 +199,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.95
+background_opacity: 1
 
 # Mouse bindings
 #
@@ -287,7 +260,6 @@ selection:
   save_to_clipboard: false
 
 # Allow terminal applications to change Alacritty's window title.
-dynamic_title: true
 
 cursor:
   # Cursor style
