--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -138,36 +138,67 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-# Colors (Gruvbox dark)
+# Colors (Gruvbox light)
 colors:
   # Default colors
   primary:
-    # hard contrast: background = '#1d2021'
-    background: '#282828'
-    # soft contrast: background = '#32302f'
-    foreground: '#ebdbb2'
+    # hard contrast: background = '0xf9f5d7'
+    background: '0xfbf1c7'
+    # soft contrast: background = '0xf2e5bc'
+    foreground: '0x3c3836'
 
   # Normal colors
   normal:
-    black:   '#282828'
-    red:     '#cc241d'
-    green:   '#98971a'
-    yellow:  '#d79921'
-    blue:    '#458588'
-    magenta: '#b16286'
-    cyan:    '#689d6a'
-    white:   '#a89984'
+    black:   '0xfbf1c7'
+    red:     '0xcc241d'
+    green:   '0x98971a'
+    yellow:  '0xd79921'
+    blue:    '0x458588'
+    magenta: '0xb16286'
+    cyan:    '0x689d6a'
+    white:   '0x7c6f64'
 
   # Bright colors
   bright:
-    black:   '#928374'
-    red:     '#fb4934'
-    green:   '#b8bb26'
-    yellow:  '#fabd2f'
-    blue:    '#83a598'
-    magenta: '#d3869b'
-    cyan:    '#8ec07c'
-    white:   '#ebdbb2'
+    black:   '0x928374'
+    red:     '0x9d0006'
+    green:   '0x79740e'
+    yellow:  '0xb57614'
+    blue:    '0x076678'
+    magenta: '0x8f3f71'
+    cyan:    '0x427b58'
+    white:   '0x3c3836'
+
+## Colors (Gruvbox dark)
+#colors:
+  ## Default colors
+  #primary:
+    ## hard contrast: background = '#1d2021'
+    #background: '#282828'
+    ## soft contrast: background = '#32302f'
+    #foreground: '#ebdbb2'
+
+  ## Normal colors
+  #normal:
+    #black:   '#282828'
+    #red:     '#cc241d'
+    #green:   '#98971a'
+    #yellow:  '#d79921'
+    #blue:    '#458588'
+    #magenta: '#b16286'
+    #cyan:    '#689d6a'
+    #white:   '#a89984'
+
+  ## Bright colors
+  #bright:
+    #black:   '#928374'
+    #red:     '#fb4934'
+    #green:   '#b8bb26'
+    #yellow:  '#fabd2f'
+    #blue:    '#83a598'
+    #magenta: '#d3869b'
+    #cyan:    '#8ec07c'
+    #white:   '#ebdbb2'
 
 # Visual Bell
 #
@@ -231,27 +262,6 @@ mouse:
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: false
 
-  url:
-    # URL launcher
-    #
-    # This program is executed when clicking on a text which is recognized as a URL.
-    # The URL is always added to the command as the last parameter.
-    #
-    # When set to `None`, URL launching will be disabled completely.
-    #
-    # Default:
-    #   - (macOS) open
-    #   - (Linux) xdg-open
-    #   - (Windows) explorer
-    #launcher:
-    #  program: xdg-open
-    #  args: []
-
-    # URL modifiers
-    #
-    # These are the modifiers that need to be held down for opening URLs when clicking
-    # on them. The available modifiers are documented in the key binding section.
-    modifiers: None
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
