--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -138,67 +138,36 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-# Colors (Gruvbox light)
+
+# Colors (Zenburn)
 colors:
-  # Default colors
-  primary:
-    # hard contrast: background = '0xf9f5d7'
-    background: '0xfbf1c7'
-    # soft contrast: background = '0xf2e5bc'
-    foreground: '0x3c3836'
-
-  # Normal colors
-  normal:
-    black:   '0xfbf1c7'
-    red:     '0xcc241d'
-    green:   '0x98971a'
-    yellow:  '0xd79921'
-    blue:    '0x458588'
-    magenta: '0xb16286'
-    cyan:    '0x689d6a'
-    white:   '0x7c6f64'
-
-  # Bright colors
   bright:
-    black:   '0x928374'
-    red:     '0x9d0006'
-    green:   '0x79740e'
-    yellow:  '0xb57614'
-    blue:    '0x076678'
-    magenta: '0x8f3f71'
-    cyan:    '0x427b58'
-    white:   '0x3c3836'
-
-## Colors (Gruvbox dark)
-#colors:
-  ## Default colors
-  #primary:
-    ## hard contrast: background = '#1d2021'
-    #background: '#282828'
-    ## soft contrast: background = '#32302f'
-    #foreground: '#ebdbb2'
-
-  ## Normal colors
-  #normal:
-    #black:   '#282828'
-    #red:     '#cc241d'
-    #green:   '#98971a'
-    #yellow:  '#d79921'
-    #blue:    '#458588'
-    #magenta: '#b16286'
-    #cyan:    '#689d6a'
-    #white:   '#a89984'
-
-  ## Bright colors
-  #bright:
-    #black:   '#928374'
-    #red:     '#fb4934'
-    #green:   '#b8bb26'
-    #yellow:  '#fabd2f'
-    #blue:    '#83a598'
-    #magenta: '#d3869b'
-    #cyan:    '#8ec07c'
-    #white:   '#ebdbb2'
+    black: '#709080'
+    blue: '#94bff3'
+    cyan: '#93e0e3'
+    green: '#c3bf9f'
+    magenta: '#ec93d3'
+    red: '#dca3a3'
+    white: '#ffffff'
+    yellow: '#e0cf9f'
+  cursor:
+    cursor: '#73635a'
+    text: '#000000'
+  normal:
+    black: '#4d4d4d'
+    blue: '#506070'
+    cyan: '#8cd0d3'
+    green: '#60b48a'
+    magenta: '#dc8cc3'
+    red: '#705050'
+    white: '#dcdccc'
+    yellow: '#f0dfaf'
+  primary:
+    background: '#3f3f3f'
+    foreground: '#dcdccc'
+  selection:
+    background: '#21322f'
+    text: '#c2d87a'
 
 # Visual Bell
 #
