--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -20,4 +20,4 @@ set-option -g default-terminal "screen-256color"
 set-option -sg escape-time 10
 set -g mouse on
 set -g status-bg black
-set -g status-fg white
+set -g status-fg green
